# PREDEV

./: .gitignore  .run.sh.swp  CHANGELOG.md  CMakeLists.txt  Dockerfile.build  README.md  ROADMAP.md  create_project.sh  delete_scaffold_mvc.sh  deploy.sh  docker-compose.yml  generate_all.sh  generate_models.sh  install_doxygen.sh  main.cpp  run.bak  run.sh  scaffold_mvc.sh
SharpishlyApp/: CMakeLists.txt
SharpishlyApp/app/: README.md  build.sh  local-docker-compose.yml  local-docker-compose.yml.22182.2025-09-09@15:39:20~  production-docker-compose.yml
SharpishlyApp/app/certs/: sharpishly.dev.crt  sharpishly.dev.key
SharpishlyApp/app/live.sharpishly.com/: Dockerfile.php
SharpishlyApp/app/local-nginx/: sharpishly.conf
SharpishlyApp/app/production-nginx /: sharpishly.conf
SharpishlyApp/app/python_app/: Dockerfile  app.py  build_run.sh  nginx.conf
SharpishlyApp/docker/: index.html  production-docker-compose.yml
SharpishlyApp/docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  ROADMAP.md  index.md
SharpishlyApp/include/: AppConfig.h  AppController.h  PenetrationModel.h
SharpishlyApp/src/: Router.cpp  Router.h  main.cpp
SharpishlyApp/src/Controller/: AboutController .h  AboutController.cpp  Controller.h  DocsController.cpp  DocsController.h  GameController.cpp  GameController.h  HomeController.cpp  HomeController.h  PenetrationController.cpp  PenetrationController.h  PostgresController.cpp  PostgresController.h  PreflighController.h  PreflightController.cpp  PreflightController.h  ProvisionController.cpp  ProvisionController.h
SharpishlyApp/src/Core/: HttpServer.h  Router.h
SharpishlyApp/src/Model/: GameModel.cpp  GameModel.h  Model.h  PenetrationModel.cpp  PenetrationModel.h  ProvisionModel.cpp  ProvisionModel.h
src/: main.cpp
(+59 files in other folders)
